--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.2",
     "@changesets/cli": "^2.29.8",
-    "@types/html-minifier-terser": "^7.0.2"
+    "@img/sharp-darwin-arm64": "^0.34.5",
+    "@types/html-minifier-terser": "^7.0.2",
+    "node-addon-api": "^8.5.0",
+    "sharp": "^0.33.5"
   }
 }
